crates/ic-hir/tests/snapshots/enum_type_mismatch_test__arithmetic_foreign_enum_in_union_case_label_is_rejected.snap
---
source: crates/ic-hir/tests/enum_type_mismatch_test.rs
assertion_line: 155
expression: "common::parse_and_expect_errors(input)"
---
⨯: value 'CIRCLE' of enum 'Shape' cannot be assigned to enum 'Color'
  @ test.idl:5:18

 2 │ enum Color { RED };
 3 │ enum Shape { CIRCLE };
 4 │ union U switch (Color) {
   │                 ˆˆˆˆˆ expected enum 'Color'
 5 │     case CIRCLE + 0: long x;
   │          ˆˆˆˆˆˆˆˆˆˆ value of enum 'Shape'
 6 │ };
