crates/ic-hir/tests/snapshots/enum_type_mismatch_test__mixing_enum_types_in_const_is_rejected.snap
---
source: crates/ic-hir/tests/enum_type_mismatch_test.rs
assertion_line: 38
expression: "common::parse_and_expect_errors(input)"
---
⨯: value 'CIRCLE' of enum 'Shape' cannot be assigned to enum 'Color'
  @ test.idl:4:32

 2 │ enum Color { RED };
 3 │ enum Shape { CIRCLE };
 4 │ const Color MY_COLOR = CIRCLE;
   │       ˆˆˆˆˆ            ˆˆˆˆˆˆ value of enum 'Shape'
   │       └─ expected enum 'Color'
